# healthcheck-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY_PII_AUDIT.md  compress.sh  healthcheck-bin  install.sh  justfile  lines.sh  rebuild.sh
.github/workflows/: ci.yml  docs-check.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
health-bin/: Cargo.toml
health-bin/src/: cli.rs  commands.rs  lib.rs  main.rs  runner.rs  status.rs
health-bin/src/cli/: mod.rs  tests.rs
health-bin/src/path_validation/: edge_case_tests.rs  mod.rs  tests.rs
health-bin/src/status/: mod.rs  tests.rs  writer.rs
health-bin/src/status/writer/: tests.rs
health-bin/tests/: integration.rs  status_json.rs
health-core/: .gitignore  Cargo.toml  perf.data
health-core/benches/: core_bench.rs  memory.rs  process_check.rs  tcp_check.rs
health-core/src/: lib.rs
health-core/src/config/: database.rs  file.rs  helpers.rs  http.rs  mod.rs
health-core/src/memory/: container.rs  host.rs  mod.rs
health-core/src/probes/: database.rs  mod.rs
health-core/src/probes/http/: mod.rs  transport.rs  url.rs
health-core/src/probes/process/: config.rs  mod.rs
health-core/src/probes/tcp/: config.rs  mod.rs
health-core/src/registry/: mod.rs
health-core/tests/: config_env.rs  meminfo.rs  memory.rs
tests/: README.bench.md  bench-build.sh  bench-run.sh  bench-stop.sh
