[package]
name = "healthcheck-bin"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[[bin]]
name = "healthcheckrs"
path = "src/main.rs"

[dependencies]
healthcheck-core = { path = "../health-core" }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
divan = "0.1"
